--- a/1101561009_GeorgiKerezov/public/custom.css
+++ b/1101561009_GeorgiKerezov/public/custom.css
@@ -1,10 +1,12 @@
 html 	
 { 
-	overflow-y: scroll; 
+	overflow-y: scroll;
+	position: relative;
+	min-height: 98%;
 }
 body
 {
-	padding-top: 50px; 
+	padding-top: 3px; 
 }
 #push, #footer {
     height: 60px;
@@ -14,28 +16,33 @@ body
 	width: 200px;
 	float:left;
 }
-#footer {
-    position: fixed;
-    height: 40px;
-    bottom: 0;
-    width: 100%;
-	text-align: center;
-	color: grey;
+#footer 
+{
+  position: absolute;
+  z-index: 1;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  text-align: center;
+  font-size: 15px;
+  font-family: Helvetica, Arial;
+  line-height: 23px;
+  color: grey;
 }
 .btn:focus
 {
 	outline: none !important;
 }
-#sortOrder , #sortField
+#sortOrder , #sortField, .sort-button
 {
     padding:3px;
     margin: 5px;
     -webkit-border-radius:4px;
     -moz-border-radius:4px;
     border-radius:4px;
-    -webkit-box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
-    -moz-box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
-    box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
+    -webkit-box-shadow: 2px 2px 2px 2px #ccc, 0 -1px #fff inset;
+    -moz-box-shadow: 2px 2px 2px 2px #ccc, 0 -1px #fff inset;
+    box-shadow: 2px 2px 2px 2px #ccc, 0 -1px #fff inset;
     background: #f8f8f8;
     color:#888;
     border:none;
@@ -47,6 +54,26 @@ body
     cursor:pointer;
 	color: #000;
 }
+.searchText
+{
+	padding:3px;
+    margin: 5px;
+    -webkit-border-radius:4px;
+    -moz-border-radius:4px;
+    border-radius:4px;
+    -webkit-box-shadow: 2px 2px 2px 2px #ccc, 0 -1px #fff inset;
+    -moz-box-shadow: 2px 2px 2px 2px #ccc, 0 -1px #fff inset;
+    box-shadow: 2px 2px 2px 2px #ccc, 0 -1px #fff inset;
+    background: #f8f8f8;
+    color:#888;
+    border:none;
+    outline:none;
+    display: inline-block;
+    -webkit-appearance:none;
+    -moz-appearance:none;
+    appearance:none;
+	color: #000;
+}
 .errors
 {
    border: 1px solid #D8D8D8;
@@ -56,7 +83,7 @@ body
    margin: 15px;
    font-size: 14px;
    text-transform: uppercase;
-   background-color: #f9f9f9;
+   background-color: #eee;
    color: #f00;
    text-align: center;
    visibility:hidden;
@@ -69,10 +96,111 @@ body
    font-family: Arial, Helvetica;
    font-size: 14px;
    text-transform: uppercase;
-   background-color: rgb(236, 255, 216);
-   color: #000;
+   background-color: #eee;
+   color: #419641;
    text-align: center;
    text-transform: uppercase;
    margin: 15px;
    visibility:hidden;
+}
+.container
+{
+	margin-bottom: 60px;
+}
+#advancedSearch
+{
+	margin-bottom: 20px;
+	visibility: hidden;
+}
+.advancedSearchText
+{
+	font-weight: bold;
+}
+.checkbox
+{
+	margin: 5px 0px 0px 20px !important;
+}
+#phoneSearch
+{
+	margin-right: 30px;
+}
+.exactMatchText
+{
+	margin-left: 10px;
+	font-weight: bold;
+}
+.labelForSearch
+{
+	cursor: pointer;
+	margin-left: 10px;
+}
+.table
+{
+	margin-top: 15px;
+}
+.basicSearch
+{
+	display: inline;
+}
+.pagination-control li
+{
+    display: inline-block;
+}
+.pagination-control button
+{
+    font-size: 12px;
+    margin-top: -26px;
+    cursor:pointer;
+}
+.pagination
+{
+    margin:5px 0px !important;
+	visibility: hidden;
+}
+.tableHeader
+{
+	text-align: center;
+}
+[class^="icon-"], [class*=" icon-"] 
+{
+	display: inline-block;
+	width: 14px;
+	height: 14px;
+	margin-top: 1px;
+	margin-right: .3em;
+	line-height: 14px;
+	vertical-align: text-top;
+	background-image: url("../img/glyphicons-halflings.png");
+	background-position: 14px 14px;
+	background-repeat: no-repeat;
+}
+.icon-white
+{
+	background-image: url("../img/glyphicons-halflings-white.png");
+}
+.icon-ok-sign 
+{
+	background-position: -72px -96px;
+}
+.icon-remove-sign 
+{
+	background-position: -48px -96px;
+}
+.popover
+{
+	min-width: 200px !important;
+}
+.popover-content
+{
+	padding: 1px !important;
+}
+.sort-button
+{
+	margin-left: 13px;
+	min-width: 6%;
+}
+.jumbotron
+{
+	padding-top: 15px !important;
+	padding-bottom: 15px !important;
 }
