--- a/1101561009_GeorgiKerezov/public/custom.css
+++ b/1101561009_GeorgiKerezov/public/custom.css
@@ -8,26 +8,23 @@ body
 {
 	padding-top: 3px; 
 }
-#push, #footer {
-    height: 60px;
-}
 .form-control
 {
 	width: 200px;
-	float:left;
+	float: left;
 }
 #footer 
 {
-  position: absolute;
-  z-index: 1;
-  bottom: 0;
-  width: 100%;
-  height: 40px;
-  text-align: center;
-  font-size: 15px;
-  font-family: Helvetica, Arial;
-  line-height: 23px;
-  color: grey;
+	position: absolute;
+	z-index: 1;
+	bottom: 0;
+	width: 100%;
+	height: 15px;
+	text-align: center;
+	font-size: 15px;
+	font-family: Helvetica, Arial;
+	line-height: 23px;
+	color: grey;
 }
 .btn:focus
 {
@@ -35,73 +32,66 @@ body
 }
 #sortOrder , #sortField, .sort-button
 {
-    padding:3px;
+    padding: 3px;
     margin: 5px;
-    -webkit-border-radius:4px;
-    -moz-border-radius:4px;
-    border-radius:4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
     -webkit-box-shadow: 2px 2px 2px 2px #ccc, 0 -1px #fff inset;
     -moz-box-shadow: 2px 2px 2px 2px #ccc, 0 -1px #fff inset;
     box-shadow: 2px 2px 2px 2px #ccc, 0 -1px #fff inset;
     background: #f8f8f8;
-    color:#888;
-    border:none;
-    outline:none;
+    color: #888;
+    border: none;
+    outline: none;
     display: inline-block;
-    -webkit-appearance:none;
-    -moz-appearance:none;
-    appearance:none;
-    cursor:pointer;
+    cursor: pointer;
 	color: #000;
 }
 .searchText
 {
 	padding:3px;
-    margin: 5px;
-    -webkit-border-radius:4px;
-    -moz-border-radius:4px;
-    border-radius:4px;
+    margin: 5px 0px 5px 5px;
+    -webkit-border-radius: 4px 0px 4px 4px;
+    -moz-border-radius: 4px 0px 4px 4px;
+    border-radius: 4px 0px 4px 4px;
     -webkit-box-shadow: 2px 2px 2px 2px #ccc, 0 -1px #fff inset;
     -moz-box-shadow: 2px 2px 2px 2px #ccc, 0 -1px #fff inset;
     box-shadow: 2px 2px 2px 2px #ccc, 0 -1px #fff inset;
     background: #f8f8f8;
-    color:#888;
-    border:none;
-    outline:none;
+    border: none;
+    outline: none;
     display: inline-block;
-    -webkit-appearance:none;
-    -moz-appearance:none;
-    appearance:none;
 	color: #000;
 }
 .errors
 {
-   border: 1px solid #D8D8D8;
-   padding: 10px;
-   border-radius: 5px;
-   font-family: Arial, Helvetica;
-   margin: 15px;
-   font-size: 14px;
-   text-transform: uppercase;
-   background-color: #eee;
-   color: #f00;
-   text-align: center;
-   visibility:hidden;
+	border: 1px solid #D8D8D8;
+	padding: 10px;
+	border-radius: 5px;
+	font-family: Arial, Helvetica;
+	margin: 15px;
+	font-size: 14px;
+	text-transform: uppercase;
+	background-color: #eee;
+	color: #f00;
+	text-align: center;
+	visibility: hidden;
 }
 .success
 {
-   border: 1px solid #D8D8D8;
-   padding: 10px;
-   border-radius: 5px;
-   font-family: Arial, Helvetica;
-   font-size: 14px;
-   text-transform: uppercase;
-   background-color: #eee;
-   color: #419641;
-   text-align: center;
-   text-transform: uppercase;
-   margin: 15px;
-   visibility:hidden;
+	border: 1px solid #D8D8D8;
+	padding: 10px;
+	border-radius: 5px;
+	font-family: Arial, Helvetica;
+	font-size: 14px;
+	text-transform: uppercase;
+	background-color: #eee;
+	color: #419641;
+	text-align: center;
+	text-transform: uppercase;
+	margin: 15px;
+	visibility: hidden;
 }
 .container
 {
@@ -150,11 +140,11 @@ body
 {
     font-size: 12px;
     margin-top: -26px;
-    cursor:pointer;
+    cursor: pointer;
 }
 .pagination
 {
-    margin:5px 0px !important;
+    margin: 5px 0px !important;
 	visibility: hidden;
 }
 .tableHeader
@@ -203,4 +193,27 @@ body
 {
 	padding-top: 15px !important;
 	padding-bottom: 15px !important;
+}
+.glyphicon-search
+{
+	padding: 4.5px;
+	-webkit-box-shadow: 2px 2px 2px 2px #ccc, 0 -1px #fff inset;
+    -moz-box-shadow: 2px 2px 2px 2px #ccc, 0 -1px #fff inset;
+    box-shadow: 2px 2px 2px 2px #ccc, 0 -1px #fff inset;
+    background: #f8f8f8;
+    border: none;
+    outline: none;
+    display: inline-block;
+}
+.glyphicon-copyright-mark, .glyphicon-save, .glyphicon-remove, .glyphicon-edit, .glyphicon-sort, .glyphicon-chevron-left
+{
+	margin-right: 5px;
+}
+.glyphicon-chevron-right
+{
+	margin-left: 5px;
+}
+.glyphicon-plus, .glyphicon-remove-circle, .glyphicon-saved
+{
+	margin-right: 2px;
 }
