--- a/1101561009_GeorgiKerezov/public/custom.css
+++ b/1101561009_GeorgiKerezov/public/custom.css
@@ -30,11 +30,27 @@ body
 {
 	outline: none !important;
 }
-#sortOrder , #sortField, .sort-button
+#sortOrder , #sortField, .sort-button, .custom-page-button
 {
     padding: 3px;
     margin: 5px;
     -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-box-shadow: 2px 2px 2px 2px #ccc, 0 -1px #fff inset;
+    -moz-box-shadow: 2px 2px 2px 2px #ccc, 0 -1px #fff inset;
+    box-shadow: 2px 2px 2px 2px #ccc, 0 -1px #fff inset;
+    background: #f8f8f8;
+    border: none;
+    outline: none;
+    display: inline-block;
+    cursor: pointer;
+	color: #000;
+}
+#pageSizeSelect
+{
+	padding: 3px;
+	-webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
     -webkit-box-shadow: 2px 2px 2px 2px #ccc, 0 -1px #fff inset;
@@ -48,7 +64,29 @@ body
     cursor: pointer;
 	color: #000;
 }
-.sortingLabel
+.custom-pagesize
+{
+	display: inline;
+	visibility: hidden;
+}
+.custom-pagesize-value
+{
+	width: 10%;
+	min-width: 10%;
+	margin-left: 5px;
+	padding: 4px;
+	-webkit-border-radius: 4px 0px 4px 4px;
+    -moz-border-radius: 4px 0px 4px 4px;
+    border-radius: 4px 0px 4px 4px;
+    -webkit-box-shadow: 2px 2px 2px 2px #ccc, 0 -1px #fff inset;
+    -moz-box-shadow: 2px 2px 2px 2px #ccc, 0 -1px #fff inset;
+    box-shadow: 2px 2px 2px 2px #ccc, 0 -1px #fff inset;
+    background: #f8f8f8;
+    border: none;
+    outline: none;
+	color: #000;
+}
+.sortingLabel, .pageLabel
 {
 	font-weight: bold;
 }
@@ -211,7 +249,7 @@ body
 {
 	margin-left: 5px;
 }
-.glyphicon-plus, .glyphicon-remove-circle, .glyphicon-saved
+.glyphicon-plus, .glyphicon-remove-circle, .glyphicon-saved, .pageLabel
 {
 	margin-right: 2px;
 }
