--- a/1201561074_NikolayIvanov/MEAN/public/style.css
+++ b/1201561074_NikolayIvanov/MEAN/public/style.css
@@ -9,3 +9,8 @@
 	bottom:0px;
 	left:10px;
 }
+
+html 	{ overflow-y:scroll; }
+body { padding-top:50px; }
+#address-list { margin-bottom:30px; }
+			
